--- a/_posts/2016-04-04-UnEssay.md
+++ b/_posts/2016-04-04-UnEssay.md
@@ -1,3 +1,10 @@
+---
+
+layout: post
+title: Unessay
+
+---
+
 # [My trivia Twine game can be found here](http://sarahollett.github.io/DHTriviaTwine/)
 
 ## Pedagogy
